--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {},
   "scripts": {
+    "install": "sudo npm install",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "sudo node APP/foxbot.js"
   },
