--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "foxbot.js",
   "dependencies": {
     "discord.js": "^11.4.2",
-    "mysql": "^2.17.1"
+    "mysql": "^2.17.1",
+    "mongodb":"^3.2.6"
   },
   "devDependencies": {},
   "scripts": {
-    "install": "sudo npm install",
+    "install": "",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "sudo node APP/foxbot.js"
+    "start": "node .APP/foxbot.js"
   },
   "repository": {
     "type": "git",
