--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "[![forthebadge](https://forthebadge.com/images/badges/made-with-javascript.svg)](https://forthebadge.com)\r [![forthebadge](https://forthebadge.com/images/badges/60-percent-of-the-time-works-every-time.svg)](https://forthebadge.com)",
   "main": "foxbot.js",
   "dependencies": {
+    "assert": "^2.0.0",
     "discord.js": "^11.4.2",
     "mongodb": "^3.2.6",
-    "assert": "^2.0.0"
+    "tmi.js": "^1.4.2"
   },
   "devDependencies": {},
   "scripts": {
